# Vayyl

./: .gitignore  AGENT.md  AGENTS.md  DEMO_GUIDE.md  DESIGN.md  MAINNET_READINESS.md  PRODUCT.md  README.md  inspect_vayyl_pool.txt  install_stellar.py  package.json  pnpm-lock.yaml
.impeccable/: design.json
backend/: check_relayer.js  docker-compose.vault.yml  docker-compose.yml
backend/proof-bridge/: Cargo.toml
backend/proof-bridge/src/: main.rs
circuits/: asp_membership.circom  deposit.circom  deposit_v2.circom  hidden_order_trigger.circom  liquidation_heartbeat.circom  multi_leg_basket.circom  package.json  pnpm-lock.yaml  position_close.circom  position_health.circom  position_open.circom  sealed_order.circom  transfer.circom  withdraw.circom  withdraw_v2.circom
contracts/: Cargo.toml
contracts/agentic-settlement-hub/: Cargo.toml
contracts/agentic-settlement-hub/src/: lib.rs
contracts/agentic-settlement-hub/test_snapshots/test/: test_agent_nullifier_double_spend_fails.1.json  test_claim_quest_fails_if_proof_invalid.1.json  test_claim_quest_pays_out_e2e.1.json  test_claim_without_pool_allowlist_fails.1.json
contracts/asp-membership/: Cargo.toml
contracts/asp-membership/src/: lib.rs
contracts/asp-membership/test_snapshots/test/: test_empty_root_nonzero_at_depth_20.1.json  test_initialize.1.json  test_insert_and_membership.1.json  test_is_known_root_accepts_current_and_recent_rejects_unknown.1.json  test_onchain_root_matches_circuit_merkleproof_internal_sibling.1.json  test_onchain_root_matches_circuit_merkleproof_two_leaves.1.json  test_root_history_window_evicts_oldest.1.json
contracts/asp-non-membership/: Cargo.toml
contracts/asp-non-membership/src/: lib.rs
contracts/asp-non-membership/test_snapshots/test/: test_block_and_check.1.json  test_block_leaf_above_field_modulus.1.json  test_initialize.1.json
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/groth16-verifier/test_snapshots/test/: test_cross_contract_verify.1.json
contracts/hidden-order-registry/: Cargo.toml
contracts/hidden-order-registry/src/: lib.rs
contracts/hidden-order-registry/test_snapshots/test/: test_cancel_order_refunds_escrow.1.json  test_commit_rejects_negative_escrow.1.json  test_initialize.1.json  test_reveal_and_execute_pays_out_e2e.1.json  test_reveal_fails_if_proof_invalid.1.json  test_reveal_without_pool_allowlist_fails.1.json
contracts/liquidation-engine/: Cargo.toml
contracts/liquidation-engine/src/: lib.rs
contracts/liquidation-engine/test_snapshots/test/: test_double_init_fails.1.json  test_initialize.1.json  test_initiate_liquidation_not_stale_fails.1.json  test_is_liquidated_default_false.1.json  test_is_stale_saturates_near_u64_max.1.json  test_is_stale_without_heartbeat.1.json  test_register_heartbeat.1.json  test_register_heartbeat_requires_auth.1.json  test_register_heartbeat_with_auth.1.json  test_reveal_and_seize_fails_if_proof_invalid.1.json  test_reveal_and_seize_moves_collateral_e2e.1.json  test_seize_without_pool_allowlist_fails.1.json
contracts/position-manager/: Cargo.toml
contracts/position-manager/src/: lib.rs
contracts/position-manager/test_snapshots/test/: test_close_inserts_output_note_into_pool.1.json  test_close_or_modify_fails_if_proof_invalid.1.json  test_double_init_fails.1.json  test_health_threshold_getter_matches_const.1.json  test_initialize_and_admin.1.json  test_mark_position_seized_requires_liquidation_engine_auth.1.json  test_open_position_fails_if_proof_invalid.1.json
contracts/vayyl-mock-oracle/: Cargo.toml
contracts/vayyl-mock-oracle/src/: lib.rs
contracts/vayyl-mock-token/: Cargo.toml
contracts/vayyl-mock-token/src/: lib.rs
contracts/vayyl-pool/: Cargo.toml
contracts/vayyl-pool-factory/: Cargo.toml
contracts/vayyl-pool-factory/src/: lib.rs
contracts/vayyl-pool-factory/test_snapshots/test/: test_deploy_and_deposit_withdraw.1.json  test_initialize.1.json
contracts/vayyl-pool/src/: lib.rs  test.rs
contracts/vayyl-pool/test_snapshots/test/: test_admin_getter.1.json  test_asp_check_precedes_proof_verify_c3.1.json  test_deposit_accepts_stale_but_in_window_asp_root_c3.1.json  test_deposit_emits_event_C4.1.json  test_deposit_happy_path_moves_tokens_and_inserts_leaf.1.json  test_deposit_invalid_proof_moves_no_tokens_M6.1.json  test_deposit_rejects_bogus_asp_root_c3.1.json  test_deposit_rejects_negative_amount_M2.1.json  test_double_spend_rejected.1.json  test_execute_settlement_inserts_note_and_pays_out.1.json  test_execute_settlement_rejects_double_spend_nullifier.1.json  test_execute_settlement_rejects_negative_payout.1.json  test_execute_settlement_rejects_non_authority.1.json  test_execute_settlement_reshield_moves_no_tokens.1.json  test_pull_public_deposit_moves_tokens_from_depositor.1.json  test_remove_settlement_authority_revokes_access.1.json  test_transfer_rejects_blocked_nullifier.1.json  test_upgrade_requires_admin_auth.1.json  test_v1_entrypoint_is_disabled_on_v2_pool.1.json  test_v2_deposit_is_fixed_and_rejects_duplicate_commitment.1.json  test_v2_withdraw_is_fixed_and_rejects_double_spend.1.json  test_withdraw_accepts_stale_but_in_window_root_H4.1.json  test_withdraw_rejects_blocked_nullifier.1.json  test_withdraw_rejects_unknown_root_H4.1.json
contracts/vayyl-types/: Cargo.toml
contracts/vayyl-types/src/: lib.rs
deployments/: asp_bootstrap.json  mainnet-vault-v1.json  testnet-vault-v2-demo-cohort.md  testnet-vault-v2-evidence.json  testnet-vault-v2.json  testnet.json
frontend/: .env.mainnet.example  .env.testnet  app.html  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scratch/: test_reflector.ts
scripts/: asp_insert.js  deploy_mainnet_vault.ps1  deploy_sprint4.ps1  deploy_testnet.ps1  deploy_testnet_vault_v2.ps1  e2e_agentic.js  e2e_hidden_order.js  e2e_liquidation.js  e2e_position.js  e2e_stale_only.js  e2e_testnet.js  finish_deploy_testnet.ps1  fix_e2e.js  generate-circom-params.js  make_stale_script.js  randomize_e2e.js  register_vks.js  register_vks.ps1  revert_priv.js  wire_authorities.js  (+2 more)
(+186 files in other folders)
