[workspace]
resolver = "2"
members = [
    "vayyl-pool",
    "position-manager",
    "liquidation-engine",
    "asp-membership",
    "asp-non-membership",
    "groth16-verifier",
    "hidden-order-registry",
    "agentic-settlement-hub",
    "vayyl-pool-factory",
    "vayyl-types",
    "vayyl-mock-token"
]

[workspace.dependencies]
soroban-sdk = "26.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
