[package]
name = "proof-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }

# Note: The actual BN254 serialization format for Soroban's native functions
# will be confirmed against the SDK source. These dependencies are preliminary.
