[package]
name = "agentic-settlement-hub"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
vayyl-types = { path = "../vayyl-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real VayylPool to prove claim_quest pays out end-to-end.
vayyl-pool = { path = "../vayyl-pool" }
