[package]
name = "asp-membership"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-poseidon = { path = "../../rs-soroban-poseidon" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
