[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat-crypto"] }
vayyl-types = { path = "../vayyl-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
