[package]
name = "liquidation-engine"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
vayyl-types = { path = "../vayyl-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real VayylPool to prove reveal_and_seize moves collateral end-to-end.
vayyl-pool = { path = "../vayyl-pool" }
