[package]
name = "vayyl-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
vayyl-types = { path = "../vayyl-types" }
soroban-poseidon = { path = "../../rs-soroban-poseidon" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real AspMembership contract for exercising deposit ASP root-binding end to end.
asp-membership = { path = "../asp-membership" }
