[package]
name = "vayyl-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
vayyl-types = { path = "../vayyl-types" }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon.git", rev = "b4bf706b7d0d602f9389280d259c0fb9f19983bf" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real AspMembership contract for exercising deposit ASP root-binding end to end.
asp-membership = { path = "../asp-membership" }
asp-non-membership = { path = "../asp-non-membership" }
